apps/observability/base/resources/jaeger/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: gateway-jaeger
spec:
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      tls:
        httpsRedirect: true
      hosts:
        - jaeger.svc.home.arpa
        - jaeger-collector.svc.home.arpa
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: jaeger-tls
      hosts:
        - jaeger.svc.home.arpa
        - jaeger-collector.svc.home.arpa
