apps/observability/base/resources/jaeger/virtual-service.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-jaeger
  namespace: observability
spec:
  parentRefs:
    - name: istio-gateway
      namespace: istio-system
      sectionName: https-jaeger
  hostnames:
    - jaeger.svc.home.arpa
    - jaeger-collector.svc.home.arpa
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /collector
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: jaeger-collector
          port: 4317
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: jaeger-query
          port: 16686
